<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:gravity="bottom|center_horizontal"
    android:background="#2ea98c"
    android:id="@+id/linearLayout2">

    <Button
        android:id="@+id/bt_mainMe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@android:drawable/ic_dialog_email"
        android:text="@string/bt_main_me"
        android:background="#2ea98c" />
    <Button
        android:id="@+id/bt_mainResources"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@android:drawable/ic_dialog_email"
        android:text="@string/bt_main_resources"
        android:background="#2ea98c" />
    <Button
        android:id="@+id/bt_mainSchoolmates"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@android:drawable/ic_dialog_email"
        android:text="@string/bt_main_schoolmates"
        android:background="#2ea98c" />

</LinearLayout>